# mersenne_twister

./: CMakeLists.txt  README.md  main.cpp  mersenne_twister.cpp  mersenne_twister.h
cmake/: FindNTL.cmake
